Changelog:
Version 0.99.4
 - Added Translations for Japanese language, ja (TRANSIFEX)
 - Added Translations for Russian language, ru (TRANSIFEX)
 - Added Translations for British English language  en-GB (TRANSIFEX)
 - Added turned Versions for UBASE_01 (4 Maps total)
 - Added alternate/turned Version 1 for UBASE_01 (e,f)
 - Fix Wrong production requirements for some Drone Upgrades)
 - Fix naming issue with Alloy Drone Medikit repair
 - Upgrade Heavy Laser Autoshot (now shots 4 times)
 - Adjusted Ruleset to latest changes in : openxcom_git_master_2018_09_17_0112 or newer

Version 0.99.3
 - Final Ressource File Restructure
 - Turning THUNDER by 90 degree (Unified Craft MapSize)
 - Fix Tile and Route issue for LINERSHIP00.MAP
 - Fix CRAFT spawn for CARGOSHIP
 - Fix Soldier Armor Repair in Research Tree Graphic
 - Fix Alien Grenade / Elerium Rocket Research and Graphic
 - Fix Wall issue for UFO_190m.MAP
 - Fix out of boundary nodes for some Maps
 - Fix missing usage information on medical items/drones
 - Fix Several extraStrings Typos
 - Fix Missing Name String for MALE_CIVILIAN
 - Fix mapScript for POLAR, MARSH and SWAMPS to reduce chance of UFO inaccessible
 - Fix Increase lategame weapon variety
 - Fix Tile and Route issue on EXPANDEDUBASE21
 - Fix Missing Halfed fundingCap
 - Fix missionZone values N/S Atlantic
 - Fix NIKE Cross Commendation and some commendation spellings
 - Adjusted Raceweights slightly
 - Adjust Manufacture more to vanilla
 - Adjust Muton Race - Added Muton Elite Leaders
 - Adjust Stats for Muton Elites and Muton Elite Guards
 - Adjust Armor Damage Modifiers for Muton ELite, Muton Elite Guard, Holodrone, Armored Sectopod
 - Adjust Race composition, Ranks and Spawnnumber for Final Mission Stages
 - Added turned Versions for: UBASE_00
 - Added turned Versions for: UBASE_02
 - Added turned Versions for: UBASE_03
 - Added turned Versions for: UBASE_04
 - Added turned Versions for: UBASE_05
 - Added turned Versions for: UBASE_06