@@ -288,28 +288,38 @@ en-US:
   STR_ARMORED_VEST_CORPSE: "Damaged Armored Vest"
   STR_ARMORED_VEST_REPAIR: "Repair Armored Vest"
   STR_ARMORED_VEST_UFOPEDIA: "Ceramic ballistic vest, offers protection against projectiles and explosions."
+  STR_UPGRADE_ARMORED_VEST_TO_ALLOY_VEST: "Armored Vest -> Alloy Vest"
 
   STR_ALLOY_VEST: "Alloy Vest"
   STR_ALLOY_VEST_UC: "ALLOY VEST"
   STR_ALLOY_VEST_CORPSE: "Damaged Alloy Vest"
   STR_ALLOY_VEST_REPAIR: "Repair Alloy Vest"
   STR_ALLOY_VEST_UFOPEDIA: "This ballistic vest is reinforced with Alien Alloys for greatly improved durability."
+  STR_UPGRADE_ALLOY_VEST_TO_PERSONAL_ARMOR: "Alloy Vest -> Personal Armor"
 
   STR_PERSONAL_ARMOR_CORPSE: "Damaged Personal Armor"
   STR_PERSONAL_ARMOR_REPAIR: "Repair Personal Armor"
+  STR_UPGRADE_PERSONAL_ARMOR_TO_POWER_SUIT: "Personal Armor -> Power Suit"
+  STR_UPGRADE_PERSONAL_ARMOR_TO_FLYING_SUIT: "Personal Armor -> Flying Suit"
 
   STR_POWER_SUIT_CORPSE: "Damaged Power Suit"
   STR_POWER_SUIT_REPAIR: "Repair Power Suits"
   STR_POWER_SUIT_UFOPEDIA: "A powerful new protection for soldiers, this armor is powered by an Elerium energy source, creating a light antigravity field and greatly amplifying the endurance of the wearer, it offers the best protection yet for combat troops."
+  STR_UPGRADE_POWER_SUIT_TO_FLYING_SUIT: "Power Suit -> Flying Suit"
+  STR_UPGRADE_POWER_SUIT_TO_REINFORCED_POWER_SUIT: "Power Suit -> Reinf. Power Suit"
+  STR_UPGRADE_POWER_SUIT_TO_REINFORCED_FLYING_SUIT: "Power Suit -> Reinf. Flying Suit"
 
   STR_FLYING_SUIT_CORPSE: "Damaged Flying Suit"
   STR_FLYING_SUIT_REPAIR: "Repair Flying Suit"
+  STR_UPGRADE_FLYING_SUIT_TO_REINFORCED_POWER_SUIT: "Flying Suit -> Reinf. Power Suit"
+  STR_UPGRADE_FLYING_SUIT_TO_REINFORCED_FLYING_SUIT: "Flying Suit -> Reinf. Flying Suit"
 
   STR_REINFORCED_POWER_SUIT: "Reinforced Power Suit"
   STR_REINFORCED_POWER_SUIT_UC: "REINFORCED POWER SUIT"
   STR_REINFORCED_POWER_SUIT_CORPSE: "Damaged Reinforced Power Suit"
   STR_REINFORCED_POWER_SUIT_REPAIR: "Repair Reinforced Power Suits"
-  STR_REINFORCED_POWER_SUIT_UFOPEDIA: "A upgraded version of our inital Power Suit design, it features a bigger protective ability and increases also the speed of the wearer."
+  STR_REINFORCED_POWER_SUIT_UFOPEDIA: "A upgraded version of our initial Power Suit design, it features a bigger protective ability and increases also the movement speed of the wearer."
+  STR_UPGRADE_REINFORCED_POWER_SUIT_TO_REINFORCED_FLYING_SUIT: "Reinf. Power Suit -> Reinf. Flying Suit"
 
   STR_REINFORCED_FLYING_SUIT: "Reinforced Flying Suit"
   STR_REINFORCED_FLYING_SUIT_UC: "REINFORCED FLYING SUIT"
